mudei o index.html e css
coloquei um estilo na pagina e novo menu no saite

--- a/saite-exmplo/index.html
+++ b/saite-exmplo/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu primeiro programa com repositorio</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Bem vindo </h1>
+    <header>
+        <div><h1>TecUsual</h1></div>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Tecnolgia</a></li>
+            <li><a href="#">Midia</a></li>
+            <li><a href="#">Contacto</a></li>
+        </ul>
+    </header>
+    <h2>Bem vindo </h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus reiciendis, ratione molestias aut perspiciatis distinctio vero provident voluptas fugit totam velit eos pariatur alias voluptate possimus, dolores doloribus quasi ipsam.</p>
 
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt placeat sint atque odit eaque reprehenderit error voluptatum, aspernatur natus repudiandae adipisci obcaecati labore culpa autem quos molestiae tempora eius dolores!</p>
