--- a/saite-exmplo/index.html
+++ b/saite-exmplo/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <div><h1>TecUsual</h1></div>
+        <div class="div-logo"><h1>TecUsual</h1></div>
         <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">Tecnolgia</a></li>
@@ -16,9 +16,28 @@
             <li><a href="#">Contacto</a></li>
         </ul>
     </header>
+
+    <!--HIRO-->
+    <section class="section-hero">
+        <a href="#abunt"> 
+            <img src="" alt="">
+            <h3> As Tecnolgia do futuro </h3>
+         </a>
+    </section>
+
+    <div class="">
+
     <h2>Bem vindo </h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus reiciendis, ratione molestias aut perspiciatis distinctio vero provident voluptas fugit totam velit eos pariatur alias voluptate possimus, dolores doloribus quasi ipsam.</p>
 
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt placeat sint atque odit eaque reprehenderit error voluptatum, aspernatur natus repudiandae adipisci obcaecati labore culpa autem quos molestiae tempora eius dolores!</p>
+
+
+    <aside>
+
+    </aside>
+    
+   </div>
+
 </body>
 </html>
