--- a/saite-exmplo/index.html
+++ b/saite-exmplo/index.html
@@ -25,7 +25,7 @@
          </a>
     </section>
 
-    <div class="">
+    <div class="container">
 
     <h2>Bem vindo </h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus reiciendis, ratione molestias aut perspiciatis distinctio vero provident voluptas fugit totam velit eos pariatur alias voluptate possimus, dolores doloribus quasi ipsam.</p>
@@ -33,8 +33,14 @@
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt placeat sint atque odit eaque reprehenderit error voluptatum, aspernatur natus repudiandae adipisci obcaecati labore culpa autem quos molestiae tempora eius dolores!</p>
 
 
-    <aside>
+    <aside class="aside">
 
+        <div>
+            <h3>Artigos Recentes</h3>
+        </div>
+        <div>
+            <h3>Artigos Top</h3>
+        </div>
     </aside>
     
    </div>
