--- a/saite-exmplo/index.html
+++ b/saite-exmplo/index.html
@@ -11,7 +11,7 @@
         <div class="div-logo"><h1>TecUsual</h1></div>
         <ul>
             <li><a href="#">Home</a></li>
-            <li><a href="#">Tecnolgia</a></li>
+            <li><a href="#">Tecnolgias</a></li>
             <li><a href="#">Midia</a></li>
             <li><a href="#">Contacto</a></li>
         </ul>
